@@ -56,6 +56,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #6274: Fixed possible file descriptors leak in subprocess.py
+
 - Issue #6271: mmap tried to close invalid file handle (-1) when annonymous.
   (On Unix)
 
